[package]
name = "nyomot2rust"
version = "0.1.0"
authors = ["prajadimas <dmspraja2105@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
jsonwebtoken = "7.2.0"
chrono = "0.3"
serde = { version = "1.0.105", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
